--- a/wp-content/themes/wbfj/assets/css/main.css
+++ b/wp-content/themes/wbfj/assets/css/main.css
@@ -731,7 +731,7 @@ p.footer-link a {
   line-height: 1.3;
   color: #222;
   padding-left: 17px;
-  border-left: 5px solid rgb(204, 204, 204);
+  border-left: 5px solid #cccccc;
 }
 .w-signup-form .w-signup-link a:hover {
   text-decoration: underline;
@@ -743,7 +743,7 @@ p.footer-link a {
 }
 .blog-widget-style-1 .blog-left {
   padding-right: 20px;
-  border-right: 1px solid rgb(230, 230, 230);
+  border-right: 1px solid #e6e6e6;
 }
 .blog-widget-style-1 .blog-left .thumb {
   margin-bottom: 22px;
@@ -838,7 +838,7 @@ p.footer-link a {
   display: flex;
   flex-wrap: wrap;
   padding-bottom: 13px;
-  border-bottom: 1px solid rgb(230, 230, 230);
+  border-bottom: 1px solid #e6e6e6;
   margin-bottom: 10px;
 }
 .blog-widget-style-1 .blog-right .blog-list-wrap .blog-list .thumb {
@@ -991,7 +991,7 @@ p.footer-link a {
   display: flex;
   flex-wrap: wrap;
   padding-bottom: 13px;
-  border-bottom: 1px solid rgb(230, 230, 230);
+  border-bottom: 1px solid #e6e6e6;
   margin-bottom: 10px;
 }
 .blog-widget-style-2 .blog-bottom .blog-list-wrap .blog-list .thumb {
@@ -1145,12 +1145,15 @@ p.footer-link a {
     grid-template-columns: 1fr;
     grid-gap: 30px;
   }
+
   .blog-widget-style-1 .blog-left {
     padding-right: 0;
   }
+
   .blog-widget-style-1 .blog-right {
     padding-left: 0;
   }
+
   .has-header-right-flex {
     flex-direction: column;
     padding: 30px 0;
@@ -1160,19 +1163,24 @@ p.footer-link a {
   .better-weather[max-width~="2000px"] .bw_degree p {
     font-size: 16px !important;
   }
+
   div.better-weather.style-normal .bw_currently > * {
     position: relative;
     margin: 0 auto;
   }
+
   .better-weather[max-width~="2000px"] .bw_days li {
     width: 50%;
   }
+
   div.better-weather[max-width~="2000px"] {
     height: 355px;
   }
+
   .better-weather[max-width~="2000px"] .bw_date-loc {
     margin: 0 auto;
   }
+
   div.better-weather[max-width~="2000px"] .bw_days {
     position: absolute;
     bottom: 0px;
@@ -1180,42 +1188,53 @@ p.footer-link a {
     width: 100%;
     top: auto;
   }
+
   .better-weather[max-width~="2000px"] .bw_days li {
     width: 50%;
   }
+
   div.better-weather.with-natural-background.state-partly-cloudy-day {
     background-size: cover;
   }
+
   .better-weather[max-width~="2000px"] .bw_degree {
     width: 100%;
   }
+
   .better-weather[max-width~="2000px"] .bw_up-degree {
     position: static !important;
     padding-top: 20px;
     padding-bottom: 30px;
   }
+
   .better-weather[max-width~="2000px"] .bw_down-degree {
     position: static !important;
   }
+
   .better-weather[max-width~="2000px"] .bw_degree p {
     text-align: left;
     padding-left: 50px;
   }
+
   .better-weather[max-width~="2000px"] .bw_down-degree, .better-weather[max-width~="2000px"] .bw_up-degree {
     position: relative;
   }
+
   .better-weather[max-width~="550px"] .bw_summary {
     width: 50%;
     position: static !important;
     transform: translateY(-16px);
   }
+
   .better-weather[max-width~="550px"] .bw_summary {
     margin: 0 auto;
   }
+
   div.better-weather.have-next-days[max-width~="2000px"] .bw_date-loc {
     position: static;
     padding-top: 20px;
   }
+
   div.better-weather.unit-showed[max-width~="2000px"] .bw_degree {
     position: static;
     margin-top: 30px;
@@ -1306,6 +1325,74 @@ header.page-header .page-title {
   padding-bottom: 3px;
   border-top: 1px solid #ddd;
   padding-top: 1px;
+}
+
+.cr-crossroad-title {
+  font-size: 34px;
+  line-height: 1.5;
+  font-family: "Oswald";
+  font-weight: 300;
+}
+
+.cr-widget-title {
+  border-bottom: 2px solid #222;
+  margin-bottom: 25px;
+}
+
+.cr-default-sidebar-title {
+  background-color: #222;
+  color: #fff;
+  font-size: 17px;
+  height: 33px;
+  line-height: 33px;
+  font-weight: 800;
+  letter-spacing: -0.5px;
+  padding: 0px 35px 5px 9px;
+  margin-bottom: 0px;
+  display: inline-block;
+  position: relative;
+  z-index: 1;
+}
+
+.cr-default-sidebar-title:after {
+  position: absolute;
+  right: -1px;
+  top: 0;
+  height: 100%;
+  width: 18px;
+  content: "";
+  background-color: #fff;
+  clip-path: polygon(0 0, 100% 0, 100% 100%);
+}
+
+.gf_browser_gecko.gform_wrapper .gfield_label {
+  font-size: 16px;
+  color: #222;
+  font-weight: 700;
+  margin-bottom: 9px;
+}
+
+.gf_browser_gecko.gform_wrapper label {
+  font-size: 13px;
+  color: #222;
+}
+
+blockquote {
+  line-height: 25px;
+  font-size: 18px;
+  color: #777;
+  margin: 0 0 18px;
+  padding: 0px 20px 0px 19px;
+  border-left: 5px solid #cccccc;
+}
+
+blockquote a {
+  color: #222;
+}
+
+blockquote a:hover {
+  color: #222;
+  text-decoration: underline;
 }
 
 /*------------------------------------------------------------------------------
