--- a/wp-content/themes/wbfj/assets/scss/_hemalcss.scss
+++ b/wp-content/themes/wbfj/assets/scss/_hemalcss.scss
@@ -50,3 +50,75 @@
 		}
 	}
 }
+.wbfj-calendar-event {
+	.gform_wrapper {
+		ul.gform_fields {
+			display: grid;
+			grid-template-columns: repeat(2, 1fr);
+			li {
+				input {
+					width: 100%;
+				}
+			}
+		}
+		input {
+			&:not([type=radio]) {
+				&:not([type=checkbox]) {
+					&:not([type=submit]) {
+						&:not([type=button]) {
+							&:not([type=image]) {
+								&:not([type=file]) {
+									width: 100%;
+									height: 50px;
+									border-color: #ddd;
+									padding: 0 20px;
+									color: #222;
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+		select {
+			width: 100%;
+			height: 50px;
+			border-color: #ddd;
+			padding: 0 20px;
+			color: #222;
+		}
+		.top_label {
+			div.ginput_container {
+				position: relative;
+			}
+		}
+		img.ui-datepicker-trigger {
+			position: absolute;
+			right: 15px;
+			top: 50%;
+			transform: translateY(-50%);
+		}
+		textarea.medium {
+			border-color: #ddd;
+		}
+		.gfield_checkbox {
+			li {
+				label {
+					color: #222;
+					font-weight: 600;
+					margin-top: 5px;
+					margin-left: 3px;
+				}
+			}
+		}
+	}
+	.gform_wrapper.gf_browser_chrome {
+		.gfield_time_ampm {
+			select {
+				padding: 0 6px;
+				-webkit-appearance: none;
+				-moz-appearance: none;
+			}
+		}
+	}
+}
