--- a/wp-content/themes/wbfj/assets/scss/_hemalcss.scss
+++ b/wp-content/themes/wbfj/assets/scss/_hemalcss.scss
@@ -122,3 +122,10 @@
 		}
 	}
 }
+@media (max-width: 640px) {
+	.wbfj-calendar-event .gform_wrapper ul.gform_fields {
+		grid-column-gap: 0;
+		display: grid;
+		grid-template-columns: repeat(1, 1fr);
+	}
+}
