--- a/wp-content/themes/wbfj/assets/css/main.css
+++ b/wp-content/themes/wbfj/assets/css/main.css
@@ -1445,6 +1445,19 @@ blockquote a:hover {
   left: auto;
 }
 
+.mc4wp-form-fields label {
+  font-size: 16px;
+  font-weight: 700;
+  display: block;
+  color: #222;
+  margin-bottom: 9px;
+}
+
+.mc4wp-form-fields input[type=email] {
+  width: 100%;
+  padding: 5px 15px;
+}
+
 .gform_wrapper input:not([type=radio]):not([type=checkbox]):not([type=submit]):not([type=button]):not([type=image]):not([type=file]) {
   border: 0;
   border: 1px solid #ddd;
