--- a/wp-content/themes/wbfj/assets/scss/_hemalcss.scss
+++ b/wp-content/themes/wbfj/assets/scss/_hemalcss.scss
@@ -140,3 +140,8 @@
     height: 50px;
     border-color: #ddd;
 }
+.gform_wrapper.gf_browser_chrome ul.gform_fields li.gfield select {
+    width: 100%;
+    height: 50px;
+    border-color: #ddd;
+}
