--- a/wp-content/themes/wbfj/assets/css/main.css
+++ b/wp-content/themes/wbfj/assets/css/main.css
@@ -1561,6 +1561,10 @@ blockquote a:hover {
   border-color: #ddd;
 }
 
+.gform_wrapper ul.gfield_checkbox li label {
+  color: #222;
+}
+
 /*------------------------------------------------------------------------------
 	Template Name: Starter Project Template.
 -------------------------------------------------------------------------------*/
