--- a/wp-content/themes/wbfj/assets/scss/innersections.scss
+++ b/wp-content/themes/wbfj/assets/scss/innersections.scss
@@ -130,3 +130,30 @@ blockquote a:hover {
   width: 100%;
   padding: 5px 15px;
 }
+.cr-miles-title {
+  font-size: 28px;
+  font-weight: 600;
+  color: #000;
+  line-height: 40px;
+  margin-bottom: 10px;
+}
+.cr-miles-content-img {
+  flex: 0 0 130px;
+  margin-left: 20px;
+  max-width: 130px;
+}
+.cr-miles-content-wrapper a {
+  font-size: 16px;
+  color: #222;
+  font-weight: 300;
+  font-family: 'Oswald';
+}
+.cr-miles-semi-title {
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 34px;
+  margin-bottom: 8px;
+}
+.cr-miles-content-wrapper {
+  display: flex;
+}
