--- a/wp-content/themes/wbfj/assets/css/main.css
+++ b/wp-content/themes/wbfj/assets/css/main.css
@@ -731,7 +731,7 @@ p.footer-link a {
   line-height: 1.3;
   color: #222;
   padding-left: 17px;
-  border-left: 5px solid #cccccc;
+  border-left: 5px solid rgb(204, 204, 204);
 }
 .w-signup-form .w-signup-link a:hover {
   text-decoration: underline;
@@ -743,7 +743,7 @@ p.footer-link a {
 }
 .blog-widget-style-1 .blog-left {
   padding-right: 20px;
-  border-right: 1px solid #e6e6e6;
+  border-right: 1px solid rgb(230, 230, 230);
 }
 .blog-widget-style-1 .blog-left .thumb {
   margin-bottom: 22px;
@@ -838,7 +838,7 @@ p.footer-link a {
   display: flex;
   flex-wrap: wrap;
   padding-bottom: 13px;
-  border-bottom: 1px solid #e6e6e6;
+  border-bottom: 1px solid rgb(230, 230, 230);
   margin-bottom: 10px;
 }
 .blog-widget-style-1 .blog-right .blog-list-wrap .blog-list .thumb {
@@ -991,7 +991,7 @@ p.footer-link a {
   display: flex;
   flex-wrap: wrap;
   padding-bottom: 13px;
-  border-bottom: 1px solid #e6e6e6;
+  border-bottom: 1px solid rgb(230, 230, 230);
   margin-bottom: 10px;
 }
 .blog-widget-style-2 .blog-bottom .blog-list-wrap .blog-list .thumb {
@@ -1145,15 +1145,12 @@ p.footer-link a {
     grid-template-columns: 1fr;
     grid-gap: 30px;
   }
-
   .blog-widget-style-1 .blog-left {
     padding-right: 0;
   }
-
   .blog-widget-style-1 .blog-right {
     padding-left: 0;
   }
-
   .has-header-right-flex {
     flex-direction: column;
     padding: 30px 0;
@@ -1163,24 +1160,19 @@ p.footer-link a {
   .better-weather[max-width~="2000px"] .bw_degree p {
     font-size: 16px !important;
   }
-
   div.better-weather.style-normal .bw_currently > * {
     position: relative;
     margin: 0 auto;
   }
-
   .better-weather[max-width~="2000px"] .bw_days li {
     width: 50%;
   }
-
   div.better-weather[max-width~="2000px"] {
     height: 355px;
   }
-
   .better-weather[max-width~="2000px"] .bw_date-loc {
     margin: 0 auto;
   }
-
   div.better-weather[max-width~="2000px"] .bw_days {
     position: absolute;
     bottom: 0px;
@@ -1188,53 +1180,42 @@ p.footer-link a {
     width: 100%;
     top: auto;
   }
-
   .better-weather[max-width~="2000px"] .bw_days li {
     width: 50%;
   }
-
   div.better-weather.with-natural-background.state-partly-cloudy-day {
     background-size: cover;
   }
-
   .better-weather[max-width~="2000px"] .bw_degree {
     width: 100%;
   }
-
   .better-weather[max-width~="2000px"] .bw_up-degree {
     position: static !important;
     padding-top: 20px;
     padding-bottom: 30px;
   }
-
   .better-weather[max-width~="2000px"] .bw_down-degree {
     position: static !important;
   }
-
   .better-weather[max-width~="2000px"] .bw_degree p {
     text-align: left;
     padding-left: 50px;
   }
-
   .better-weather[max-width~="2000px"] .bw_down-degree, .better-weather[max-width~="2000px"] .bw_up-degree {
     position: relative;
   }
-
   .better-weather[max-width~="550px"] .bw_summary {
     width: 50%;
     position: static !important;
     transform: translateY(-16px);
   }
-
   .better-weather[max-width~="550px"] .bw_summary {
     margin: 0 auto;
   }
-
   div.better-weather.have-next-days[max-width~="2000px"] .bw_date-loc {
     position: static;
     padding-top: 20px;
   }
-
   div.better-weather.unit-showed[max-width~="2000px"] .bw_degree {
     position: static;
     margin-top: 30px;
@@ -1796,6 +1777,47 @@ h3.wbfj-blog-single-title {
     margin-top: 10px;
   }
 }
+.job-info span.job-title {
+  font-size: 20px;
+  font-family: "Oswald";
+  color: #3b3a3c !important;
+  transition: all 0.3s;
+}
+
+.job-info h4 a:hover span.job-title {
+  color: #3297fa !important;
+}
+
+.sjb-archive-page h3 span.job-title {
+  font-size: 25px;
+  font-family: Oswald, sans-serif;
+  color: #444 !important;
+  border-bottom: 5px solid #222;
+  display: block;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding-bottom: 12px;
+}
+
+.sjb-page .list-data .v1 .job-description {
+  font-size: 16px;
+  font-family: Open Sans !important;
+}
+
+.wbfj-read-more-btn a {
+  background: #3297fa;
+  color: #fff;
+  display: inline-block;
+  padding: 10px 17px;
+  border-radius: 5px;
+  margin-top: 16px;
+}
+
+.wbfj-read-more-btn a:hover {
+  background: #222;
+  color: #fff;
+}
+
 /*------------------------------------------------------------------------------
 	Template Name: Starter Project Template.
 -------------------------------------------------------------------------------*/
