--- a/wp-content/themes/wbfj/assets/css/main.css
+++ b/wp-content/themes/wbfj/assets/css/main.css
@@ -1851,6 +1851,7 @@ h3.wbfj-blog-single-title {
   font-family: Oswald !important;
   height: 40px;
   line-height: 40px;
+  display: block;
   padding: 0px 15px;
   font-weight: 800;
   font-size: 15px !important;
@@ -1877,6 +1878,52 @@ h3.wbfj-blog-single-title {
 
 #mega-menu-wrap-main-menu #mega-menu-main-menu li.mega-menu-megamenu > ul.mega-sub-menu > li.mega-menu-row {
   border-top: 3px solid rgba(255, 255, 255, 0.4);
+}
+
+.wbfj-post-image-single-img {
+  background: rgba(255, 255, 255, 0.2);
+  position: relative;
+}
+
+.wbfj-post-image-single-img img {
+  padding: 14px;
+  position: relative;
+  padding-top: 0;
+  transition: all 0.3s;
+}
+
+.wbfj-post-image-single-img:hover img {
+  padding: 0;
+}
+
+.mega-sub-menu h4.popular-post-title a {
+  font-family: Oswald;
+  color: #fff;
+  font-size: 20px;
+  display: block;
+}
+
+.mega-sub-menu h4.popular-post-title {
+  margin-bottom: 2px;
+}
+
+.mega-sub-menu h4.popular-post-title a:hover {
+  text-decoration: underline;
+  background: rgba(255, 255, 255, 0.2);
+}
+
+ul.mega-sub-menu .wbfj-post-image-single-text-meta img {
+  border-radius: 50%;
+  margin-right: 5px;
+  margin-right: 9px;
+}
+
+ul.mega-sub-menu .wbfj-post-image-widget-wrapper span.wbfj-post-image-single-text-date {
+  color: #fff;
+}
+
+ul.mega-sub-menu .wbfj-post-image-widget-wrapper span.wbfj-post-image-single-text-date i {
+  margin-right: 6px;
 }
 
 /*------------------------------------------------------------------------------
