--- a/wp-content/themes/wbfj/assets/scss/_hemalcss.scss
+++ b/wp-content/themes/wbfj/assets/scss/_hemalcss.scss
@@ -515,4 +515,7 @@ ul.mega-sub-menu .wbfj-post-image-single-text {
 		padding-top: 10px;
 		padding-bottom: 16px;
 	}
+	#mega-menu-wrap-main-menu #mega-menu-main-menu li.mega-menu-megamenu > ul.mega-sub-menu > li.mega-menu-row > ul.mega-sub-menu > li.mega-menu-columns-3-of-12 {
+		width: 50%;
+	}
 }
