--- a/wp-content/themes/wbfj/assets/css/main.css
+++ b/wp-content/themes/wbfj/assets/css/main.css
@@ -2001,6 +2001,23 @@ ul.mega-sub-menu .wbfj-post-image-single-text {
   font-family: "Oswald";
 }
 
+@media (min-width: 769px) and (max-width: 991px) {
+  #mega-menu-wrap-main-menu #mega-menu-main-menu li.mega-menu-item.mega-menu-megamenu ul.mega-sub-menu ul.mega-sub-menu {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  #mega-menu-wrap-main-menu #mega-menu-main-menu li.mega-menu-item.mega-menu-megamenu ul.mega-sub-menu ul.mega-sub-menu > * {
+    flex: 0 0 calc(50% - 15px) !important;
+  }
+  #mega-menu-wrap-main-menu #mega-menu-main-menu li.mega-menu-item.mega-menu-megamenu ul.mega-sub-menu ul.mega-sub-menu ul.mega-sub-menu {
+    display: block;
+    padding-top: 10px;
+    padding-bottom: 16px;
+  }
+  #mega-menu-wrap-main-menu #mega-menu-main-menu li.mega-menu-megamenu > ul.mega-sub-menu > li.mega-menu-row > ul.mega-sub-menu > li.mega-menu-columns-3-of-12 {
+    width: 50%;
+  }
+}
 /*------------------------------------------------------------------------------
 	Template Name: Starter Project Template.
 -------------------------------------------------------------------------------*/
