--- a/wp-content/themes/wbfj/assets/scss/_hemalcss.scss
+++ b/wp-content/themes/wbfj/assets/scss/_hemalcss.scss
@@ -522,3 +522,6 @@ ul.mega-sub-menu .wbfj-post-image-single-text {
 		overflow: hidden;
 	}
 }
+div#mega-menu-wrap-main-menu #mega-menu-main-menu > li.mega-menu-item > a.mega-menu-link:hover {
+    font-weight: 600;
+}
