--- a/wp-content/themes/wbfj/assets/scss/_hemalcss.scss
+++ b/wp-content/themes/wbfj/assets/scss/_hemalcss.scss
@@ -525,3 +525,10 @@ ul.mega-sub-menu .wbfj-post-image-single-text {
 div#mega-menu-wrap-main-menu #mega-menu-main-menu > li.mega-menu-item > a.mega-menu-link:hover {
     font-weight: 600;
 }
+.swiper_slider .swiper-slide a {
+    display: block;
+}
+
+.swiper_slider .swiper-slide a img {
+    width: 100%;
+}
